# confluence_webapp

./: Dockerfile  README.md  pyproject.toml  requirements.txt
confluence_webapp/src/: app.py
confluence_webapp/src/models/: sam.py  unet_model.py
confluence_webapp/src/services/: 00-mj-sandbox.ipynb  prediction_service.py
confluence_webapp/src/utils/: cellpose_utils.py  detectron_utils.py  sam_utils.py  streamlit_utils.py  unet_utils.py  utils.py
data/: datasetdicts.pkl
